--- a/touro/package.json
+++ b/touro/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.1",
+    "faker": "^6.6.6",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.3",
+    "victory": "^36.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
