--- a/touro/view/package.json
+++ b/touro/view/package.json
@@ -7,6 +7,7 @@
     "firebaseui": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dragscroll": "^2.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
