--- a/touro/view/package.json
+++ b/touro/view/package.json
@@ -8,9 +8,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dragscroll": "^2.0.1",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "tsparticles": "^3.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
