--- a/touro/view/package.json
+++ b/touro/view/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.6.3",
     "firebaseui": "^6.1.0",
+    "primereact": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dragscroll": "^2.0.1",
