--- a/touro/backend/package.json
+++ b/touro/backend/package.json
@@ -13,7 +13,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
-    "nodemon": "^3.0.2",
-    "react-dragscroll": "^2.0.1"
+    "nodemon": "^3.0.2"
   }
 }
