--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,8 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase": "^10.7.1",
-    "firebase-admin": "^12.0.0",
-    "nodemon": "^3.0.2"
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "nodemon": "^3.0.1"
   }
 }
