--- a/view/package.json
+++ b/view/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.3",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-signin": "^1.0.3",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
