--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
+    "mercadopago": "^2.0.9",
     "nodemon": "^3.0.1"
   }
 }
