--- a/view/package.json
+++ b/view/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.19",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.3",
     "firebase": "^10.7.1",
+    "mercadopago": "^2.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-signin": "^1.0.3",
